# moex-loader

./: .gitignore  MOEX_loader.spec  README.md  main.py  package.json  pyproject.toml
electron/: main.ts  preload.js  preload.ts  tsconfig.json
electron/ipc/: handlers.js  handlers.ts
electron/services/: downloadService.ts  moexService.ts  tickerService.ts  xlsxService.ts
electron/types/: moex.ts
electron/utils/: transform.ts
renderer/: package.json
renderer/src/: App.tsx
renderer/src/types/: global.d.ts
